# RADMA

./: .gitignore  CMakeLists.txt  README.md  flashtool.sh  inference_results.csv  inference_time_combined.cc  main.cc  model_switching_results.json  noop.sh  requirements.txt  setup.sh  winner_matrix.xlsx
captures/: inferences.csv
captures/IMG_CLASS/efficientnet-edgetpu-L_quant_edgetpu_2025-09-08_21-53-07/saleae_raw/: digital.csv
captures/IMG_CLASS/efficientnet-edgetpu-M_quant_edgetpu_2025-09-08_21-55-28/saleae_raw/: digital.csv
captures/IMG_CLASS/efficientnet-edgetpu-S_quant_edgetpu_2025-09-08_21-57-29/saleae_raw/: digital.csv
captures/IMG_CLASS/inception_v1_224_quant_edgetpu_2025-09-08_21-59-39/saleae_raw/: digital.csv
captures/IMG_CLASS/inception_v2_224_quant_edgetpu_2025-09-08_22-02-39/saleae_raw/: digital.csv
captures/IMG_CLASS/mobilenet_v1_0.25_128_quant_edgetpu_2025-09-08_22-03-48/saleae_raw/: digital.csv
captures/IMG_CLASS/mobilenet_v1_0.5_160_quant_edgetpu_2025-09-08_22-05-18/saleae_raw/: digital.csv
captures/IMG_CLASS/mobilenet_v1_0.75_192_quant_edgetpu_2025-09-08_22-06-39/saleae_raw/: digital.csv
captures/IMG_CLASS/mobilenet_v2_1.0_224_inat_plant_quant_edgetpu_2025-09-08_22-08-28/saleae_raw/: digital.csv
captures/IMG_CLASS/mobilenet_v2_1.0_224_quant_edgetpu_2025-09-08_22-12-04/saleae_raw/: digital.csv
captures/IMG_CLASS/tf2_mobilenet_v1_1.0_224_ptq_edgetpu_2025-09-08_22-10-08/saleae_raw/: digital.csv
captures/IMG_CLASS/tf2_mobilenet_v2_1.0_224_ptq_edgetpu_2025-09-08_22-13-39/saleae_raw/: digital.csv
captures/IMG_CLASS/tf2_mobilenet_v3_edgetpu_1.0_224_ptq_edgetpu_2025-09-08_22-15-22/saleae_raw/: digital.csv
captures/IMG_CLASS_10s/efficientnet-edgetpu-L_quant_edgetpu_2025-09-09_19-44-10/saleae_raw/: digital.csv
captures/IMG_CLASS_10s/efficientnet-edgetpu-M_quant_edgetpu_2025-09-09_19-46-39/saleae_raw/: digital.csv
captures/IMG_CLASS_10s/efficientnet-edgetpu-S_quant_edgetpu_2025-09-09_19-48-49/saleae_raw/: digital.csv
captures/efficientnet-edgetpu-L_quant_edgetpu_2025-09-12_14-45-08/saleae_raw/: digital.csv
captures/efficientnet-edgetpu-M_quant_edgetpu_2025-09-12_14-47-46/saleae_raw/: digital.csv
captures/idle_power/: digital.csv
data/: JackNet_Stats.xlsx  Model_Stats.xlsx  compiled_characterization.json
data/models/Object_Detection/SSD_MobileNet_V1_TF2/: scratch.txt
data/models/coral_target/: Grid_A0.5_D08_quant_edgetpu.tflite  Grid_A0.5_D10_quant_edgetpu.tflite  Grid_A0.75_D10_quant_edgetpu.tflite
data/models/custom/: param_counts.json
data/stk/: HEO_Sat_Classical_Orbit_Elements.csv  HEO_Sat_Fixed_Position_Velocity.csv  HEO_Sat_LLA_Position.csv  HEO_Sat_Lighting_Times.csv  SSO_Sat_Lighting_Times.csv  eLEO_Sat_Lighting_Times.csv
data/stk/gregtime/: HEO_Sat_Classical_Orbit_Elements.csv
data/stk/old/: HEO_Sat_Fixed_Position_Velocity.csv
data/tpunet_acc/: Grid_A0.25_D02_quant_eval.json  Grid_A0.25_D04_quant_eval.json  Grid_A0.25_D06_quant_eval.json  Grid_A0.25_D08_quant_eval.json  Grid_A0.25_D10_quant_eval.json  Grid_A0.25_D12_quant_eval.json  Grid_A0.5_D02_quant_eval.json  Grid_A0.5_D04_quant_eval.json  Grid_A0.5_D06_quant_eval.json  Grid_A0.5_D08_quant_eval.json  Grid_A0.5_D10_quant_eval.json  Grid_A0.5_D12_quant_eval.json  Grid_A0.75_D02_quant_eval.json  Grid_A0.75_D04_quant_eval.json  Grid_A0.75_D06_quant_eval.json  Grid_A0.75_D08_quant_eval.json  Grid_A0.75_D10_quant_eval.json  Grid_A0.75_D12_quant_eval.json  Grid_A1.0_D02_quant_eval.json  Grid_A1.0_D04_quant_eval.json  Grid_A1.0_D06_quant_eval.json  Grid_A1.0_D08_quant_eval.json  Grid_A1.0_D10_quant_eval.json  Grid_A1.0_D12_quant_eval.json  Grid_A1.25_D02_quant_eval.json  Grid_A1.25_D04_quant_eval.json  Grid_A1.25_D06_quant_eval.json  Grid_A1.25_D08_quant_eval.json  Grid_A1.25_D10_quant_eval.json  Grid_A1.25_D12_quant_eval.json  Grid_A1.5_D02_quant_eval.json  Grid_A1.5_D04_quant_eval.json  Grid_A1.5_D06_quant_eval.json  Grid_A1.5_D08_quant_eval.json  Grid_A1.5_D10_quant_eval.json  Grid_A1.5_D12_quant_eval.json
libs/: inference_model_config.h
results/: all_grids.xlsx  grids.xlsx  inference_results.csv  winner_matrix.xlsx
results/captures/idle_power/: analog.csv  idle.csv
results/case_studies/eleo/: eLEO_01_Baseline_frame_budgets.csv
results/case_studies/sso/: SSO_01_Baseline_frame_budgets.csv
results/plots/grid_analysis/: grid_budget_tables.xlsx
scripts/: .~lock.Model_Stats.xlsx#  Model_Stats.xlsx  ParamCounts.py  Param_Counts.py  analog.csv  bench_mark_sweep.py  main.cc  model_stats_plotting.py  saleae_parsing.py
src/: CMakeLists.txt  main.cc  model_swaps.cc
src/data/models/coral_target/: Grid_A0.25_D02_quant_edgetpu.tflite  Grid_A0.25_D04_quant_edgetpu.tflite  Grid_A0.25_D08_quant_edgetpu.tflite  Grid_A0.25_D12_quant_edgetpu.tflite  Grid_A0.5_D06_quant_edgetpu.tflite  Grid_A0.75_D02_quant_edgetpu.tflite  Grid_A0.75_D04_quant_edgetpu.tflite
src/libs/: inference_model_config.h  radma_data.h  radma_scheduler.cc  radma_scheduler.h  radma_types.h  sensor_configs.h
src/scripts/: .~lock.Model_Stats.xlsx#  Model_Stats.xlsx  ParamCounts.py  bench_mark_sweep.py  decision_plots.py  digital.csv  dynamic_execution.md  dynamic_execution.py  ground_track_stk.py  model_data_manager.py  model_stats_plotting.py  path_utils.py  saleae_parsing.py  scripts.md  static_model_dynamic.py  tpunet_plotting.py
src/scripts/dynamic_selection_sims/: HEO_Cases.py  SSO_Cases.py  continuous_dynamic.md  continuous_dynamic_execution.py  decision_horizon.py  decision_plots.py  dynamic_execution.md  dynamic_execution.py  eLEO_Cases.py  ground_track_stk.py  plotting_utils.py  selection_case_studies.py  static_model_dynamic.py  stk_utils.py
src/scripts/dynamic_selection_sims/obsolete/: continuous_dynamic.md  decision_plots.py  dynamic_execution.py
src/scripts/hardware_characterization/: bench_mark_sweep.py  model_swaps.py
src/scripts/hardware_characterization/plotting/: model_stats_plotting.py  tpunet_plotting.py
src/scripts/utils/: ParamCounts.py  characterization_ouput.py  model_data_manager.py  saleae_parsing.py
tests/: CMakeLists.txt  test_scheduler.cc
(+128 files in other folders)
